# CamFilter

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainWindow.cpp  mainWindow.h  settings.ini
face_recognition_service/: app.py  requirements.txt
resources/: resources.qrc
src/: mainWindow.cpp  mainWindow.ui
src/core/: ICameraType.h  iCameraType.h  openCVCamera.cpp  openCVCamera.h  qtCamera.cpp  qtCamera.h
src/ui/: mainWindow.cpp  mainWindow.h  mainWindow.ui
